--- a/Front/src/app/landing/pages/page1/page1.component.html
+++ b/Front/src/app/landing/pages/page1/page1.component.html
@@ -36,8 +36,9 @@
 
           <hr>
 
-          <p class="lead mb0">Solicite de<strong>$50.000 hasta $500.000</strong></p>
-          <span>(Si ya eres cliente antiguo pide hasta $2.000.000 )</span>
+          <p class="lead mb0">Solicite de<strong>$100.000 hasta $2.000.000</strong></p>
+          <!-- <span>(Si ya eres cliente antiguo pide hasta $2.000.000 )</span> -->
+          <p>(Plazo De 1 Hasta 6 Meses  )</p>
 
 
           <!-- <div>
