--- a/Front/src/app/landing/pages/page2/page2.component.html
+++ b/Front/src/app/landing/pages/page2/page2.component.html
@@ -36,8 +36,8 @@
 
           <hr>
 
-          <p class="lead mb0">Solicite de<strong>$2.000.000 hasta el 50% del avaluo de tu vehiculo</strong></p>
-          <span>(Puedes dejarlo en prenda o seguir usandolo )</span>
+          <p class="lead mb0">Solicite de<strong>$4.000.000 hasta el 50% del avaluo de tu vehiculo</strong></p>
+          <a href="https://www.simbogota.com.co/index.php/homepage/tramites/rda-registro-distrital-automotor/tramites-para-vehiculos-11/">(Tramite Bajo Prenda Del Vehiculo)</a>
 
 
           <!-- <div>
