--- a/Front/src/app/landing/pages/page3/page3.component.html
+++ b/Front/src/app/landing/pages/page3/page3.component.html
@@ -36,8 +36,9 @@
 
           <hr>
 
-          <p class="lead mb0">Te Prestamos Desde<strong>$4.000.000 hasta $50.000.00</strong></p>
+          <p class="lead mb0">Te Prestamos Desde<strong>$20.000.000 hasta $500.000.00</strong></p>
           <span>(Te prestamos hasta el 50% del avaluo de tu inmueble  )</span>
+          <p>(De 1 Hasta 180 Meses  )</p>
 
 
           <!-- <div>
