--- a/Front/src/app/dashboard/datostrabajo/datostrabajo.component.html
+++ b/Front/src/app/dashboard/datostrabajo/datostrabajo.component.html
@@ -24,7 +24,7 @@
                 <option selected disabled value="">Escoge...</option>
                 <option value="empleado">Empleado</option>
                 <option value="independiente">Independiente</option>
-                <option value="empresa">Empresa</option>
+                <!-- <option value="empresa">Empresa</option> -->
               </select>
             </div>
           </div>
@@ -136,7 +136,7 @@
 
               <!-- tiempoTrabajando -->
               <mat-form-field class="form-group col-md-6 pl-1">
-                <mat-label>Cuanto Llevas Como Independiente</mat-label>
+                <mat-label>Cuanto Años Llevas Como Independiente <small>(Si Llevas meses coloca 0)</small>  </mat-label>
                 <input matInput formControlName="tiempoTrabajando" type="number"
                   class="form-control">
                 <mat-error *ngIf="campoEsValidoIndependiente('tiempoTrabajando')">
