--- a/Front/src/app/dashboard/solicitudes/solicitudes.component.html
+++ b/Front/src/app/dashboard/solicitudes/solicitudes.component.html
@@ -43,13 +43,12 @@
                   <mat-expansion-panel-header>
                     <mat-panel-title>
                       <div class="col-12 col-sm-4 col-md-4  col-lg-4 col-xl-4" >
-                        <span class="text_center"> Monto: ${{ solicitud.value |
-                          number: '1.0-0' }} </span>
+                        <h2 class="text_center"> Monto: ${{ solicitud.value | number: '1.0-0' }} </h2>
                       </div>
                       <div class="col-12 col-sm-5 col-md-6  col-lg-6 col-xl-6">
-                        <span class="text_center" *ngFor="let producto of
+                        <h2 class="text_center" *ngFor="let producto of
                         productos | searchnameproduct: solicitud.idProduct"> {{
-                        producto.name }}</span>
+                        producto.name }}</h2>
                       <span class="spacer"></span>
                       </div>
                       <div class="col-12 col-sm-3 col-md-2  col-lg-2 col-xl-2">
